[package]
name = "julian"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/henryk1229/julian"
authors = ["<henryk1229> <henryk1229@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
nalgebra = "0.32"